[package]
name = "timekeeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
maud = { version = "0.26.0", features = ["axum"] }
reqwest = "0.12.1"
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"
